@@ -38,6 +38,10 @@ information or perform common manipulations:
 
 .. autofunction:: get_host
 
+.. autofunction:: get_content_length
+
+.. autofunction:: get_input_stream
+
 .. autofunction:: get_current_url
 
 .. autofunction:: get_query_string
